Revert changes to rewrite-java-tck as that's used elsewhere too