@@ -43,7 +43,7 @@ class ClassDeclarationTest implements RewriteTest {
                   permits Square, Rectangle {
               }
               """,
-            spec -> spec.afterRecipe(cu -> assertThat(cu.getClasses().getFirst().getPermits()).hasSize(2))
+            spec -> spec.afterRecipe(cu -> assertThat(cu.getClasses().get(0).getPermits()).hasSize(2))
           ),
           java(
             """
@@ -71,7 +71,7 @@ class ClassDeclarationTest implements RewriteTest {
             """
               public sealed interface Shape { }
               """,
-            spec -> spec.afterRecipe(cu -> assertThat(cu.getClasses().getFirst().getPermits()).isNull())
+            spec -> spec.afterRecipe(cu -> assertThat(cu.getClasses().get(0).getPermits()).isNull())
           ),
           java(
             """
@@ -79,7 +79,7 @@ class ClassDeclarationTest implements RewriteTest {
                   permits Square, Rectangle {
               }
               """,
-            spec -> spec.afterRecipe(cu -> assertThat(cu.getClasses().getFirst().getPermits()).hasSize(2))
+            spec -> spec.afterRecipe(cu -> assertThat(cu.getClasses().get(0).getPermits()).hasSize(2))
           ),
           java(
             """
